--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "name": "مزادنا للعقارات السعودية",
   "short_name": "مزادنا",
   "description": "منصة مزادات العقارات السعودية",
-  "start_url": "/",
+  "start_url": "./",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#0b2c4a",
